# testwittmann

./: README.md  pyproject.toml
src/testwittmann/: __main__.py  cli.py  config.py  constants.py  moldpilot_bridge.py  pipeline.py  suggestions.py
src/testwittmann.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/testwittmann/assets/suggestion_model/: model_info.json
src/testwittmann/assets/suggestion_model/sink_mark/: model_sink_mark.joblib  poly_features_sink_mark.joblib  x_scaler_sink_mark.joblib
src/testwittmann/assets/suggestion_model/weld_line/: model_weld_line.joblib
tests/: test_config.py  test_suggestions.py  test_trigger.py
